Created website rough draft

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -6,9 +6,7 @@
     <div class="container">
         <div class="left-section">
             <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/svgs/logo-white.svg" alt="logo" width="264" height="78"></a>
-            <p>
-                Extra content if you need it, if not you can delete this whole p tag. I usually do.
-            </p>
+
         </div>
         <div class="right-section">
             <div class="lists">
@@ -23,10 +21,10 @@
                         <a href="/about">About Us</a>
                     </li>
                     <li>
-                        <a href="/projects">Projects</a>
+                        <a href="/reviews">Reviews</a>
                     </li>
                     <li>
-                        <a href="/testimonials">Reviews</a>
+                        <a href="/sitemap">Sitemap</a>
                     </li>
                     <li>
                         <a href="/contact">Contact</a>
@@ -36,10 +34,11 @@
                     <li>
                         <h2>Services</h2>
                     </li>
-                    <li>Service1</li>
-                    <li>Service2</li>
-                    <li>Resources</li>
-                    <li>Sitemap</li>
+                    <li>Owners</li>
+                    <li>Tenants</li>
+                    <li>Current Rentals</li>
+                    <li>Apply For a Rental</li>
+                    <li><a href="https://calendly.com/sunseeker-rentals/property-management-call">Schedule A Call</a></li>
                 </ul>
                 <ul>
                     <li>
