--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -6,11 +6,11 @@
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Contact Us</span>
-            <h2 class="cs-title">Get It Done With Us Today</h2>
+            <h2 class="cs-title">Stress-Free Property Management Starts Here</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis at sit pellentesque molestie.  Diam, adipiscing ultrices eu turpis gravida.
+                Looking for a reliable, hassle-free property management solution? SunSeeker Rentals takes care of everything so you don’t have to. From finding quality tenants to maintaining your investment, we make property ownership effortless.
             </p>
-            <a href="" class="cs-button-solid">Get A Free Quote</a>
+            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule a free consultation</a>
         </div>
     </div>
     <!-- Background Image-->
