--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -77,13 +77,15 @@
     /* clips corners of the before element */
     overflow: hidden;
     margin: 0;
-    color: #1a1a1a;
+    color: #ffffff;
     padding: 0;
     background-color: var(--primary);
+    border-radius: 0.25rem;
     display: inline-block;
     position: relative;
     z-index: 1;
     transition: color 0.3s;
+    margin-bottom: 2rem;
   }
   #hero-1298 .cs-button-solid:before {
     content: "";
@@ -196,8 +198,8 @@
     display: block;
     height: 100%;
     width: 100%;
-    background: #fff;
-    opacity: 0.84;
+    background: #000000;
+    opacity: 0.5;
     top: 0;
     left: 0;
     z-index: 1;
