--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -84,13 +84,15 @@
             /* clips corners of the before element */
             overflow: hidden;
             margin: 0;
-            color: #1a1a1a;
+            color: #ffffff;
             padding: 0;
             background-color: var(--primary);
+            border-radius: (4/16rem);
             display: inline-block;
             position: relative;
             z-index: 1;
             transition: color 0.3s;
+            margin-bottom: 2rem;
 
             &:before {
                 content: "";
@@ -219,8 +221,8 @@
                 display: block;
                 height: 100%;
                 width: 100%;
-                background: #fff;
-                opacity: 0.84;
+                background: #000000;
+                opacity: 0.50;
                 top: 0;
                 left: 0;
                 z-index: 1;
