--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -727,6 +727,8 @@
 @media only screen and (min-width: 0rem) {
     #cs-content-1792 {
         width: 100%;
+        padding: var(--sectionPadding);
+        padding-top: 0;
         max-width: (1280/16rem);
         margin: auto;
         display: flex;
@@ -877,6 +879,7 @@
 /* Large Desktop - 1300px */
 @media only screen and (min-width: 81.25rem) {
     #cs-content-1792 {
+        padding-bottom: 0;
         margin-bottom: 5rem;
         .cs-ul {
             flex-direction: row;
