--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -10,7 +10,7 @@
             <p class="cs-text">
                 Looking for a reliable, hassle-free property management solution? SunSeeker Rentals takes care of everything so you don’t have to. From finding quality tenants to maintaining your investment, we make property ownership effortless.
             </p>
-            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule a free consultation</a>
+            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule a phone call</a>
         </div>
     </div>
     <!-- Background Image-->
