--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -39,8 +39,8 @@
                     </span>
     <ul class="cs-drop-ul">
         <li class="cs-drop-li cs-drop3-main">
-            <span class="cs-li-link cs-drop-link ">
-                <a href="/tenants" class="cs-li-link">
+            <span class="cs-li-link cs-drop-link">
+                <a href="/tenants" class="cs-li-link no-underline">
                 Tenants
                 <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
             </span>
