--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -622,6 +622,8 @@
 @media only screen and (min-width: 0rem) {
   #cs-content-1792 {
     width: 100%;
+    padding: var(--sectionPadding);
+    padding-top: 0;
     max-width: 80rem;
     margin: auto;
     display: flex;
@@ -751,6 +753,7 @@
 /* Large Desktop - 1300px */
 @media only screen and (min-width: 81.25rem) {
   #cs-content-1792 {
+    padding-bottom: 0;
     margin-bottom: 5rem;
   }
   #cs-content-1792 .cs-ul {
