--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -93,6 +93,9 @@
             z-index: 1;
             transition: color 0.3s;
             margin-bottom: 2rem;
+            white-space: nowrap;
+            padding: 0 1.5rem;
+            width: 15rem;
 
             &:before {
                 content: "";
