added google gauranteed section

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -60,7 +60,7 @@
                             <a href="/owners" class="cs-li-link cs-drop-link">Owners</a>
                         </li>
                         <li class="cs-drop-li">
-                            <a href="/rentals" class="cs-li-link cs-drop-link">Current Rentals</a>
+                            <a href="/owners" class="cs-li-link cs-drop-link">Vendors</a>
                         </li>
                     </ul>
                 </li>
@@ -70,8 +70,8 @@
                     </a>
                 </li>
                 <li class="cs-li">
-                    <a href="/sitemap" class="cs-li-link">
-                        Sitemap
+                    <a href="/rentals" class="cs-li-link">
+                        Current Rentals
                     </a>
                 </li>
             </ul>
