Reworked all pages and changed header

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -60,7 +60,7 @@
                             <a href="/owners" class="cs-li-link cs-drop-link">Owners</a>
                         </li>
                         <li class="cs-drop-li">
-                            <a href="/owners" class="cs-li-link cs-drop-link">Vendors</a>
+                            <a href="/vendors" class="cs-li-link cs-drop-link">Vendors</a>
                         </li>
                     </ul>
                 </li>
