--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -370,6 +370,8 @@
 @media only screen and (min-width: 0rem) {
     #sbs-1640 {
         padding: var(--sectionPadding);
+        margin-top: 0;
+        padding-top: 0;
         overflow: hidden;
         
         .cs-container {
@@ -519,6 +521,7 @@
         }
     }
 }
+
                                 
 /*-- -------------------------- -->
 <---          Contact           -->
