--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -6,8 +6,7 @@
 @media only screen and (min-width: 0rem) {
     #stats-539 {
         padding: var(--sectionPadding);
-        padding-top: (520/16rem);
-
+        padding-top: 0;
         .cs-container {
             width: 100%;
             max-width: (1280/16rem);
@@ -154,12 +153,11 @@
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
     #stats-539 {
-        padding: 0rem 2rem;
+        padding: 0;
         .cs-container {
             flex-direction: row;
             flex-wrap: wrap;
             align-items: flex-start;
-            padding-top: (280/16rem)
         }
 
         .cs-content {
@@ -180,8 +178,7 @@
 /* Desktop - 1024px */
 @media only screen and (min-width: 64em) {
     #stats-539 {
-        padding-top: 0rem;
-
+        padding-top: 0;
     }
 }
 
