--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -312,6 +312,8 @@
 @media only screen and (min-width: 0rem) {
   #sbs-1640 {
     padding: var(--sectionPadding);
+    margin-top: 0;
+    padding-top: 0;
     overflow: hidden;
   }
   #sbs-1640 .cs-container {
