--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -1,110 +1,87 @@
-/* STYLES FOR ABOVE THE FOLD */
-
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #hero-1298 {
-        /* 150px - 350px */
-        padding: clamp(9rem, 30.95vw, 21.875rem) (16/16rem);
-        padding-bottom: 0;
+    #hero-1839 {
+        /* 200px - 300px - leaving extra space for the navigation */
+        padding: clamp(12.5rem, 25.95vw, 18.75em) (16/16rem);
+        /* prevents the topper line from causing an overflow */
+        overflow: hidden;
         position: relative;
+        z-index: 1;
 
         .cs-container {
             width: 100%;
             max-width: (1280/16rem);
             margin: auto;
-            position: relative;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
-            /* 48px - 64px */
-            gap: clamp(3rem, 7vw, 4rem);
+            align-items: center;
+            flex-wrap: wrap;
+            /* 120px - 200px */
+            gap: clamp(7.5rem, 15vw, 12.5rem);
         }
 
         .cs-content {
-            /* set text align to left if content needs to be left aligned */
             text-align: center;
             width: 100%;
-            max-width: (630/16rem);
+            max-width: (750/16rem);
             display: flex;
-            flex-direction: column;
-            /* centers content horizontally, set to flex-start to left align */
+            justify-content: center;
             align-items: center;
-            position: relative;
-            z-index: 10;
-        }
-
-        .cs-topper {
-            font-size: var(--topperFontSize);
-            line-height: 1.2em;
-            text-transform: uppercase;
-            text-align: inherit;
-            letter-spacing: 0.1em;
-            font-weight: 700;
-            color: var(--primary);
-            margin-bottom: (4/16rem);
-            display: block;
+            flex-direction: column;
         }
 
         .cs-title {
-            /* 39px - 61px */
-            font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
-            font-weight: 900;
-            line-height: 1.2em;
-            width: 100%;
-            max-width: 17ch;
-            margin: 0 0 (16/16rem);
-            color: white;
-            position: relative;
+            /* 49px - 84px */
+            font-size: clamp(3.0625rem, 6vw, 5.25rem);
+        }
+
+        .cs-title,
+        .cs-text {
+            color: var(--bodyTextColorWhite);
         }
 
         .cs-text {
-            /* 16px - 20px */
-            font-size: clamp(1rem, 2.5vw, 1.25rem);
-            line-height: 1.5em;
-            width: 100%;
-            max-width: (700/16rem);
-            /* 28px - 40px */
-            margin: 0 0 clamp(1.75rem, 4vw, 2.5rem);
-            color: white;
+            margin-bottom: (32/16rem);
+        }
+
+        .cs-button-group {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: (8/16rem);
         }
 
         .cs-button-solid {
             font-size: (16/16rem);
-            text-align: center;
+            font-weight: 700;
             /* 46px - 56px */
             line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-            width: (180/16rem);
+            text-align: center;
             text-decoration: none;
-            font-weight: 700;
-            /* clips corners of the before element */
-            overflow: hidden;
+            min-width: (200/16rem);
             margin: 0;
-            color: #ffffff;
-            padding: 0;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
+            padding: 0 (24/16rem);
             background-color: var(--primary);
+            color: var(--bodyTextColorWhite);
             border-radius: (4/16rem);
             display: inline-block;
             position: relative;
             z-index: 1;
-            transition: color 0.3s;
-            margin-bottom: 2rem;
-            white-space: nowrap;
-            padding: 0 1.5rem;
-            width: 15rem;
 
             &:before {
                 content: "";
-                position: absolute;
-                display: block;
-                height: 100%;
                 width: 0%;
+                height: 100%;
                 background: #000;
                 opacity: 1;
+                border-radius: (4/16rem);
+                position: absolute;
                 top: 0;
                 left: 0;
                 z-index: -1;
@@ -112,232 +89,169 @@
             }
 
             &:hover {
-                color: #fff;
                 &:before {
                     width: 100%;
                 }
             }
         }
 
-        .cs-picture {
-            width: 100%;
-            /* 427px - 468px */
-            max-width: clamp(26.6875rem, 50vw, 29.25rem);
-            height: auto;
-            display: flex;
-            align-items: flex-end;
-            position: relative;
-            z-index: 7;
-
-            img {
-                width: 100%;
-                height: auto;
-            }
-        }
-
         .cs-card-group {
             width: 100%;
-            max-width: (1280/16rem);
-            /* changes to -550px at tablet */
-            margin: 0 0 (-450/16rem) 0;
-            padding: 0 (16/16rem);
-            /* prevents padding and border from affecting height and width */
-            background-color: #fff;
-            box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.1);
-            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
             display: grid;
             grid-template-columns: repeat(12, 1fr);
-            position: relative;
-            z-index: 15;
+            /* 16px - 20px */
+            gap: clamp(1rem, 2.3vw, 1.25rem);
         }
 
         .cs-item {
             text-align: left;
             list-style: none;
             width: 100%;
-            border-bottom: 1px solid #e8e8e8;
+            margin: 0;
+            /* prevents padding from affecting height and width */
             box-sizing: border-box;
-            grid-column: span 12;
-            transition:
-                background-color 0.3s,
-                border-color 0.3s;
-
-            &:last-of-type {
-                border-bottom: none;
-            }
-        }
-
-        .cs-link {
-            text-decoration: none;
-            /* 24px - 60px top & Bottom */
-            /* 24px - 16px top & Bottom */
-            padding: clamp(1.5rem, 5.3vw, 3.75rem) clamp(1rem, 2.7vw, 2.5rem);
+            /* 24px - 40px */
+            padding: clamp(1.5rem, 3vw, 2.5rem);
+            background-color: #fff;
+            box-shadow: 0px 12px 80px 0px rgba(26, 26, 26, 0.08);
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
             flex-direction: column;
+            align-items: center;
+            grid-column: span 12;
+            grid-row: span 1;
+            gap: (20/16rem);
+            position: relative;
+            z-index: 1;
         }
 
-        .cs-icon {
-            /* 32px - 40px */
-            height: clamp(2rem, 4vw, 2.5rem);
-            width: auto;
-            margin: 0 0 (16/16rem) 0;
+        .cs-picture {
+            width: 100%;
+            height: (160/16rem);
+            display: block;
+            /* causes the image to grow to it's "auto" size, but won't shrink. the cs-info fills the remaining space */
+            flex: 1 0 auto;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
 
         .cs-h3 {
             /* 20px - 25px */
-            font-size: clamp(1.25rem, 2vw, 1.5625rem);
-            font-weight: 700;
-            text-align: inherit;
+            font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
+            font-weight: bold;
             line-height: 1.2em;
-            margin: 0 0 (12/16rem) 0;
+            text-align: inherit;
+            /* 8px - 16px */
+            margin: 0 0 clamp(0.5rem, 1.2vw, 1rem) 0;
             color: var(--headerColor);
-            transition: color 0.3s;
         }
 
         .cs-item-text {
-            /* 14px - 16px */
-            font-size: clamp(0.875rem, 1.5vw, 1rem);
-            text-align: inherit;
+            font-size: (16/16rem);
             line-height: 1.5em;
             margin: 0;
+            padding: 0;
             color: var(--bodyTextColor);
-            transition:
-                color 0.3s,
-                opacity 0.3s;
+        }
+
+        .cs-link {
+            font-size: (16/16rem);
+            font-weight: 700;
+            line-height: 1.2em;
+            text-decoration: none;
+            width: 100%;
+            margin: (24/16rem) 0 0;
+            color: var(--primary);
+            display: flex;
+            gap: (4/16rem);
+
+            &:hover {
+                img {
+                    transform: translateX(0.25rem);
+                }
+            }
+
+            img {
+                transition: transform 0.3s;
+            }
         }
 
         .cs-background {
             width: 100%;
-            height: 100%;
+            height: 50%;
             display: block;
             position: absolute;
             top: 0;
             left: 0;
-            z-index: -1;
+            z-index: -2;
 
             &:before {
-                /* background color overlay */
+                /* Overlay */
                 content: "";
-                position: absolute;
-                display: block;
-                height: 100%;
                 width: 100%;
-                background: #000000;
-                opacity: 0.50;
+                height: 100%;
+                background: #000;
+                /* prevents the cursor from interacting with it */
+                pointer-events: none;
+                opacity: 0.7;
+                display: block;
+                position: absolute;
                 top: 0;
                 left: 0;
                 z-index: 1;
             }
 
             img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
                 position: absolute;
                 top: 0;
                 left: 0;
-                height: 100%;
-                width: 100%;
-                /* Makes img tag act as a background image */
-                object-fit: cover;
             }
         }
     }
 }
 
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #hero-1298 {
-        padding-bottom: (150/16rem);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: (90/16rem);
-
-        .cs-container {
-            justify-content: flex-start;
+/* Large Phone/Tablet - 500px */
+@media only screen and (min-width: 31.25rem) {
+    #hero-1839 {
+        .cs-item {
             flex-direction: row;
-        }
-
-        .cs-content {
-            text-align: left;
-            width: 60%;
-            align-items: flex-start;
+            align-items: stretch;
         }
 
         .cs-picture {
-            width: 43%;
-            position: absolute;
-            bottom: (-151/16rem);
-            right: (0/16rem);
+            height: auto;
+            min-height: (140/16rem);
+            max-width: (140/16rem);
         }
 
-
-        .cs-card-group {
-            margin: 0 0 (-350/16rem) 0;
-            padding: 0;
-        }
-
-        .cs-item {
-            grid-column: span 4;
-            border-bottom: none;
-            border-right: 1px solid #e8e8e8;
-
-            &:nth-of-type(3) {
-                border-bottom: none;
-                border-right: none;
-            }
+        .cs-info {
+            align-self: center;
         }
 
         .cs-background {
-            overflow: hidden;
-
-            &:before {
-                opacity: .5;
-                background: linear-gradient(
-                    89deg,
-                    rgba(0, 0, 0, 0.96) 47.66%,
-                    rgba(255, 255, 255, 0) 71.43%
-                );
-            }
+            height: 60%;
         }
     }
 }
 
 /* Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
-    #hero-1298 {
+    #hero-1839 {
         .cs-item {
-            &:hover {
-                background-color: #1a1a1a;
-                border-color: #1a1a1a;
-
-                .cs-h3,
-                .cs-item-text {
-                    color: var(--bodyTextColorWhite);
-                }
-
-                .cs-item-text {
-                    opacity: 0.8;
-                }
-            }
+            grid-column: span 6;
         }
-    }
-}
 
-/* Large Desktop - 1600px (Parallax Effect) */
-@media only screen and (min-width: 100rem) {
-    #hero-1298 {
         .cs-background {
-            background: url("/assets/images/hero.png");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-
-            img {
-                display: none;
-            }
+            height: 70%;
         }
     }
 }
+                                
