--- a/src/assets/less/reviews.less
+++ b/src/assets/less/reviews.less
@@ -129,3 +129,179 @@
         }
     }
 }
+
+/*-- -------------------------- -->
+<---           Stats            -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #stats-887 {
+        padding: var(--sectionPadding);
+
+
+        .cs-container {
+            width: 100%;
+            /* changes to 1280px at desktop */
+            max-width: (550/16rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            max-width: (542/16rem);
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+        }
+
+        .cs-text {
+            margin-bottom: (16/16rem);
+            &:last-of-type {
+                margin-bottom: (32/16rem);
+            }
+        }
+
+        .cs-button-solid {
+            font-size: (16/16rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+            font-weight: 700;
+            text-align: center;
+            margin: 0;
+            color: #fff;
+            min-width: (150/16rem);
+            padding: 0 (24/16rem);
+            background-color: var(--primary);
+            border-radius: (4/16rem);
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
+
+            &:before {
+                content: "";
+                position: absolute;
+                height: 100%;
+                width: 0%;
+                background: #000;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                border-radius: (4/16rem);
+                transition: width 0.3s;
+            }
+
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
+        }
+
+        .cs-card-group {
+            display: none;
+        }
+
+        .cs-item {
+            text-align: center;
+            list-style: none;
+            /* changes at small desktop then again at large desktop */
+            width: 100%;
+            /* 44px - 60px */
+            padding: clamp(2.75rem, 5vw, 3.75rem) (32/16rem);
+            /* prevents padding and border from affecting height and width */
+            box-sizing: border-box;
+            /* clips cs-icon overflowing */
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            grid-column: span 2;
+            position: relative;
+
+            &:nth-of-type(1) {
+                background-color: #fef7f4;
+                border-radius: 0 (80/16rem) 0 (80/16rem);
+            }
+            &:nth-of-type(2) {
+                background-color: #e8e8e8;
+                border-radius: (80/16rem) 0 (80/16rem) 0;
+            }
+            &:nth-of-type(3) {
+                background-color: #fbcebd;
+                border-radius: (80/16rem) 0 (80/16rem) 0;
+            }
+            &:nth-of-type(4) {
+                background-color: #f7f7f7;
+                border-radius: 0 (80/16rem) 0 (80/16rem);
+            }
+        }
+
+        .cs-number {
+            /* 39px - 49px */
+            font-size: clamp(2.4375rem, 6vw, 3.0625rem);
+            line-height: 1.2em;
+            text-align: inherit;
+            font-weight: 900;
+            margin: 0 0 (12/16rem) 0;
+            color: var(--headerColor);
+        }
+
+        .cs-desc {
+            /* 16px -20px */
+            font-size: clamp(1rem, 2vw, 1.25rem);
+            line-height: 1.2em;
+            font-weight: 700;
+            text-align: inherit;
+            margin: 0;
+            color: var(--bodyTextColor);
+        }
+    }
+}
+
+/* Tablet - 650px */
+@media only screen and (min-width: 40.625rem) {
+    #stats-887 {
+        .cs-item {
+            grid-column: span 1;
+        }
+
+        .cs-card-group {
+            width: 100%;
+            max-width: (630/16rem);
+            margin: 0;
+            padding: 0;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            /* 16px - 20px */
+            gap: clamp(1rem, 2vw, 1.25rem);
+        }
+    }
+}
+
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #stats-887 {
+        padding-top: 0rem;
+        .cs-container {
+            max-width: (1280/16rem);
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+}
+
+                                
