--- a/src/assets/less/tenants.less
+++ b/src/assets/less/tenants.less
@@ -31,7 +31,7 @@
         }
 
         .cs-topper {
-            color: #767676;
+            color: var(--primary)
         }
 
         .cs-title {
