--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -271,6 +271,7 @@ html {
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         position: fixed;
         z-index: 100;
+        
 
         &:after {
             /* on hover green bar */
@@ -556,6 +557,7 @@ html {
             display: none;
         } 
     }
+    
 }
 
 /*-- -------------------------- -->
@@ -636,6 +638,15 @@ html {
                 color: #fff;
             }
         }
+    }
+    .cs-drop-li .cs-li-link.cs-drop-link {
+        font-weight: normal; /* Or 700 if bold match is needed */
+        font-size: clamp(0.875rem, 2vw, 1.25rem);
+        color: #fff;
+        text-align: center;
+        line-height: 1.4;
+        padding: 0.5rem 1rem;
+        display: block;
     }
 }
 
