created new contact page and compressed images

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -34,11 +34,12 @@
                     <li>
                         <h2>Services</h2>
                     </li>
-                    <li>Owners</li>
-                    <li>Tenants</li>
-                    <li>Current Rentals</li>
-                    <li>Apply For a Rental</li>
-                    <li><a href="https://calendly.com/sunseeker-rentals/property-management-call">Schedule A Call</a></li>
+                    <li><a href="/owners">Owners</a></li>
+                    <li><a href="/tenants">Tenants</a></li>
+                    <li><a href="/rentals">Current Rentals</a></li>
+                    <li><a href="/rentals">Apply For a Rental</a></li>
+                    <li><a href="https://www.paypal.com/ncp/payment/9RMEJ74HRU9LL" target="_blank">Pay Application Fees</a></li>
+                    <li><a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank">Schedule A Call</a></li>
                 </ul>
                 <ul>
                     <li>
@@ -68,10 +69,13 @@
     </div>
 
     <div class="credit">
-        <span>Kenneth Ellis Designated Broker - 
-             Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Kolby Web Designs</a>
-        <span class="copyright">
-            Copyright {% year %} - Present</span>
+        <div class="credit-inner">
+            <img src="/assets/images/fha.png" alt="Equal Housing Opportunity" class="equal-housing-logo">
+            <span>Kenneth Ellis Designated Broker - Designed and Hand Coded by <a href="/" target="_blank" rel="noopener">Kolby Web Designs</a>
+            </br>
+            <span class="copyright">Copyright {% year %} - Present</span></span>
+        </div>
+
     </div>
+    
 </footer>
