--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1441,6 +1441,21 @@ html {
                 display: block;
                 font-size: (16/16rem);
             }
+
+            .credit-inner {
+                display: flex;
+                flex-direction: column; /* stack on mobile */
+                align-items: center;
+                justify-content: center;
+                gap: 0.5rem;
+                margin-bottom: 1rem;
+            }
+            
+            .equal-housing-logo {
+                height: 5rem;
+                width: auto;
+                display: block;
+            }
         }
     }
 }
@@ -1532,6 +1547,21 @@ html {
         .credit {
             .copyright {
                 display: inline-block;
+            }
+
+            .credit-inner {
+                display: flex;
+                flex-direction: column; /* stack on mobile */
+                align-items: center;
+                justify-content: center;
+                gap: 0.5rem;
+                margin-bottom: 1rem;
+            }
+            
+            .equal-housing-logo {
+                height: 5rem;
+                width: auto;
+                display: block;
             }
         }
     }
