--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -106,11 +106,12 @@
             font-weight: 700;
             text-align: center;
             margin: 0;
-            color: #1a1a1a;
+            color: #ffffff;
             border: none;
             min-width: (150/16rem);
             padding: 0 (24/16rem);
             background-color: var(--primary);
+            border-radius: (4/16rem);
             overflow: hidden;
             display: inline-block;
             position: relative;
@@ -124,6 +125,7 @@
                 position: absolute;
                 height: 100%;
                 width: 0%;
+                border-radius: (4/16rem);
                 background: #000;
                 opacity: 1;
                 top: 0;
@@ -434,7 +436,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            z-index: -1;
+            cursor: pointer;
 
             img {
                 position: absolute;
