added home page form

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -73,6 +73,11 @@
                         Current Rentals
                     </a>
                 </li>
+                <li class="cs-li cs-hide-on-desktop">
+                    <a href="/contact" class="cs-li-link">
+                        Contact Us
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
