hid utility set up page

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -51,9 +51,9 @@
                 <li class="cs-drop-li3">
                     <a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank" class="cs-li-link cs-drop-link cs-drop-link3">View Tenant Portal</a>
                 </li>
-                <li class="cs-drop-li3">
+            <!--    <li class="cs-drop-li3">
                     <a href="/utility-info" target="_blank" class="cs-li-link cs-drop-link cs-drop-link3">Utility Info</a>
-                </li>
+                </li>-->
             </ul>
                         <li class="cs-drop-li">
                             <a href="/owners" class="cs-li-link cs-drop-link">Owners</a>
