get rid of trailing commas in post hmtl

--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -3,34 +3,27 @@
 {% block head %}
     <link rel="stylesheet" href="/assets/css/blog.css">
 
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Article",
-            {% if title %}"headline": "{{ title }}",{% endif %}
-            {% if image %}
-                "image": ["{{ image }}"],
-            {% endif %}
-            {% if date %}"datePublished": "{{ date | postDate }}",{% endif %}
-            {% if client.name %}
-                "publisher": {
-                    "@type": "Organization",
-                    "name": "{{ client.name }}"
-                },
-            {% endif %}
-            {% if author %}
-                "author": [
-                    {
-                        "@type": "Person",
-                        "name": "{{ author }}"
-                    }
-                ],
-            {% endif %}
-            {% if description %}"articleBody": "{{ description | safe }}",{% endif %}
-            {% if client.domain and page.url %}"url": "{{ client.domain }}{{ page.url }}",{% endif %}
-            {% if tags %}"articleSection": "{{ tags }}"{% endif %}
-        }
-    </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "{{ title }}",
+  {% if image %}"image": ["{{ image }}"],{% endif %}
+  "datePublished": "{{ date | postDate }}",
+  "publisher": {
+    "@type": "Organization",
+    "name": "{{ client.name }}"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "{{ author }}"
+  },
+  "articleBody": "{{ description | safe }}",
+  "url": "{{ client.domain }}{{ page.url }}",
+  {% if tags %}"articleSection": "{{ tags }}"{% endif %}
+}
+</script>
+
 {% endblock %}
 
 {% block body %}
