--- a/src/assets/less/home-watch.less
+++ b/src/assets/less/home-watch.less
@@ -52,6 +52,10 @@
             z-index: 0;
         }
 
+        #cs-contact-486 {
+              scroll-behavior: smooth;
+        }
+
         .cs-background {
             width: 100%;
             height: 100%;
