--- a/src/assets/css/goodyear-property-management.css
+++ b/src/assets/css/goodyear-property-management.css
@@ -497,45 +497,65 @@
     min-height: 22.25rem;
   }
 }
-#why-2392 .cs-picture {
+.cs-big-link {
   width: 100%;
-  height: clamp(19.375rem, 30vw, 22.25rem);
-  border-radius: 1rem;
-  /* or (16/16rem); */
+  /* changes to a clamp at tablet */
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.cs-big-link:hover .cs-background img {
+  transform: scale(1.1);
+}
+.cs-background {
+  width: 100%;
+  height: 100%;
+  /* clips the img from overflowing the container on hover */
   overflow: hidden;
   display: block;
   position: relative;
-  cursor: pointer;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  border-radius: 1rem;
 }
-#why-2392 .cs-picture img {
+.cs-background:before {
+  /* color overlay */
+  content: "";
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  opacity: 0.72;
+  background-blend-mode: multiply;
+  position: absolute;
   display: block;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+.cs-background img {
   position: absolute;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
   transition: transform 0.7s;
 }
-#why-2392 .cs-picture:hover img {
-  transform: scale(1.1);
-}
-#why-2392 .cs-link-icon {
-  width: 110px;
-  height: 110px;
+.cs-link-icon {
+  /* 80px - 110px */
+  width: clamp(5rem, 11vw, 6.875rem);
+  height: clamp(5rem, 11vw, 6.875rem);
   border-radius: 50%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  pointer-events: none;
-  /* remove if you want icon clickable */
+  z-index: 10;
   transition: transform 0.3s, box-shadow 0.3s;
 }
-#why-2392 .cs-picture:hover .cs-link-icon {
-  transform: translate(-50%, -50%) scale(1.1);
-  box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.5);
+.cs-link-icon:hover {
+  transform: scale(1.1);
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 29px 0px;
 }
 /*-- -------------------------- -->
 <---          Reviews           -->
