fixed padding on listing page

--- a/src/assets/less/rentals.less
+++ b/src/assets/less/rentals.less
@@ -14,7 +14,7 @@
         flex-direction: column;
         /* centers content horizontally, set to flex-start to left align */
         align-items: center;
-        padding: 2rem 0;
+        padding: 2rem;
     }
     #cs-content-831 .cs-topper {
         font-size: var(--topperFontSize);
