--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -368,7 +368,11 @@
         .cs-label {
             grid-column: span 6;
         }
+        .cs-form .cs-label:nth-child(4),
         .cs-form .cs-label:nth-child(5) {
+            grid-column: span 6;
+        }
+        .cs-form .cs-label:nth-child(6) {
             grid-column: span 12;
         }
 
