--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1566,3 +1566,16 @@ html {
         }
     }
 }
+
+.cs-li-link.active::before,
+.cs-li-link.cs-active::before {
+  content: "";
+  width: 100%;
+  height: 3px;
+  background: var(--primary);
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  display: block;
+  border-radius: 2px;
+}
