--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -21,12 +21,12 @@
         <meta property="og:image:secure_url" content="/assets/images/logo-small.png"/>
 
         <!--Favicons-->
-        <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <link rel="shortcut icon" href="/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png?v=2" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="/assets/favicons/favicon.svg?v=2" />
+        <link rel="shortcut icon" href="/assets/favicons/favicon.ico?v=2" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png?v=2" />
+        <meta name="apple-mobile-web-app-title" content="SunSeeker Rentals" />
+        <link rel="manifest" href="/assets/favicons/site.webmanifest" />
 
         <!-- Preloads -->
         <link rel="preload" as="image" href="/assets/svgs/logo-white.svg">
