--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -184,11 +184,11 @@
     /* centers content horizontally, set to flex-start to left align */
     align-items: center;
   }
-  #contact-983 .cs-content .cs-text {
-    color: white;
-  }
   #contact-983 .cs-title {
     color: var(--bodyTextColorWhite);
+  }
+  #contact-983 .cs-text {
+    color: white;
   }
   #contact-983 .cs-form {
     width: 100%;
@@ -308,17 +308,11 @@
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #contact-983 {
-    margin-top: 5rem;
-  }
   #contact-983 .cs-container {
     max-width: 66.5rem;
   }
   #contact-983 .cs-label {
     grid-column: span 6;
-  }
-  #contact-983 .cs-form .cs-label:nth-child(5) {
-    grid-column: span 12;
   }
   #contact-983 .cs-message {
     grid-column: span 12;
