--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -241,9 +241,8 @@
             flex-direction: column;
             gap: (8/16rem);
             grid-column: span 12;
+            padding: 0 1rem;
         }
-
-        
 
         .cs-input {
             font-family: inherit;
@@ -258,7 +257,6 @@
             border: none;
 
             &::placeholder {
-
                 color: #fff;
                 opacity: 0.5;
             }
