--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -233,6 +233,7 @@
         .cs-label {
             font-size: (16/16rem);
             line-height: 1.5em;
+            width: 100%;
             color: #fff;
             display: flex;
             justify-content: flex-start;
@@ -240,7 +241,6 @@
             flex-direction: column;
             gap: (8/16rem);
             grid-column: span 12;
-            padding: 0 1rem;
         }
 
         .cs-input {
