--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -355,6 +355,16 @@
     }
 }
 
+@media only screen and (max-width: 37.5rem) {
+  #contact-983 {
+    .cs-label,
+    .cs-message,
+    .cs-wrapper {
+      grid-column: span 12;
+    }
+  }
+}
+
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
     #contact-983 {
