--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -306,6 +306,13 @@
     object-fit: cover;
   }
 }
+@media only screen and (max-width: 37.5rem) {
+  #contact-983 .cs-label,
+  #contact-983 .cs-message,
+  #contact-983 .cs-wrapper {
+    grid-column: span 12;
+  }
+}
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
   #contact-983 .cs-container {
