--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -357,10 +357,11 @@
 
 @media only screen and (max-width: 37.5rem) {
   #contact-983 {
-    .cs-label,
-    .cs-message,
-    .cs-wrapper {
-      grid-column: span 12;
+    .cs-container {
+      max-width: 100%;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      box-sizing: border-box;
     }
   }
 }
