--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -355,14 +355,13 @@
     }
 }
 
+#contact-983, #contact-983 * {
+  box-sizing: border-box;
+}
+
 @media only screen and (max-width: 37.5rem) {
   #contact-983 {
-    .cs-container {
-      max-width: 100%;
-      padding-left: 1rem;
-      padding-right: 1rem;
-      box-sizing: border-box;
-    }
+    overflow-x: hidden;
   }
 }
 
