--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1579,3 +1579,12 @@ html {
   display: block;
   border-radius: 2px;
 }
+
+// Tablet - 768px to 1023px
+@media only screen and (min-width: 48rem) and (max-width: 63.9375rem) {
+    #cs-navigation {
+        .cs-dropdown > .cs-li-link {
+            cursor: pointer;
+        }
+    }
+}
