Update Buckeye and Goodyear pages: add unique city-specific content, FAQs, and fix styling

--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -75,6 +75,22 @@
             }
         }
 
+        .cs-item-link {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+            color: inherit;
+            cursor: pointer;
+
+            &:hover {
+                .cs-h3 {
+                    color: var(--primary);
+                }
+            }
+        }
+
         .cs-picture {
             position: relative;
             display: block;
