--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -62,6 +62,18 @@
   #services-1168 .cs-item:hover .cs-arrow {
     filter: initial;
   }
+  #services-1168 .cs-item-link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+  }
+  #services-1168 .cs-item-link:hover .cs-h3 {
+    color: var(--primary);
+  }
   #services-1168 .cs-picture {
     position: relative;
     display: block;
