--- a/src/assets/less/buckeye-property-management.less
+++ b/src/assets/less/buckeye-property-management.less
@@ -1050,6 +1050,111 @@
     }
 }
 
+/*-- -------------------------- -->
+<---      City Content & FAQ      -->
+<--- -------------------------- -*/
+
+@media only screen and (min-width: 0rem) {
+    #city-content-buckeye {
+        padding: var(--sectionPadding);
+        background-color: #fff;
+
+        .cs-container {
+            width: 100%;
+            max-width: (1280/16rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .cs-content {
+            text-align: left;
+            width: 100%;
+            max-width: (800/16rem);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .cs-title {
+            margin: 0 0 (24/16rem);
+        }
+
+        .cs-h3 {
+            font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
+            line-height: 1.2em;
+            font-weight: 700;
+            margin: (32/16rem) 0 (16/16rem);
+            color: var(--headerColor);
+        }
+
+        .cs-text {
+            margin: 0 0 (24/16rem);
+        }
+    }
+
+    #faq-buckeye {
+        padding: var(--sectionPadding);
+        background-color: #F1F1F4;
+
+        .cs-container {
+            width: 100%;
+            max-width: (1280/16rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-content {
+            text-align: center;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .cs-title {
+            margin: 0;
+        }
+
+        .cs-faq-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            max-width: (800/16rem);
+            display: flex;
+            flex-direction: column;
+            gap: (20/16rem);
+        }
+
+        .cs-faq-item {
+            background-color: #fff;
+            border-radius: (8/16rem);
+            padding: clamp(1.5rem, 3vw, 2rem);
+            box-shadow: 0px 12px 80px 0px rgba(26, 26, 26, 0.08);
+        }
+
+        .cs-faq-title {
+            font-size: clamp(1.125rem, 2vw, 1.25rem);
+            font-weight: 700;
+            line-height: 1.3em;
+            margin: 0 0 (12/16rem);
+            color: var(--headerColor);
+        }
+
+        .cs-faq-text {
+            font-size: (16/16rem);
+            line-height: 1.6em;
+            margin: 0;
+            color: var(--bodyTextColor);
+        }
+    }
+}
+
                                 
 
                                 
